nodejs/02-Oauth2/frontend/_openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-oauth-playground-frontend
  labels:
    app: nodejs-oauth-playground-frontend
    app.kubernetes.io/name: nodejs-oauth-playground-frontend
    app.kubernetes.io/component: nodejs-frontend
    app.kubernetes.io/part-of: nodejs-playground
    app.openshift.io/runtime: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-oauth-playground-frontend
  template:
    metadata:
      labels:
        app: nodejs-oauth-playground-frontend
        app.kubernetes.io/name: nodejs-oauth-playground-frontend
    spec:
      containers:
        - name: nodejs-oauth-playground-frontend
          image: quay.io/jnyilimbibi/nodejs-oauth-playground-frontend:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
