nodejs/02-Oauth2/frontend/_openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-oauth-playground-frontend
  labels:
    app: nodejs-oauth-playground-frontend
    app.kubernetes.io/name: nodejs-oauth-playground-frontend
    app.kubernetes.io/component: nodejs-frontend
    app.kubernetes.io/part-of: nodejs-playground
spec:
  to:
    kind: Service
    name: nodejs-oauth-playground-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
